# ImaKart

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  form-builder
lib/: CMakeLists.txt  Graphics.hpp
lib/include/: Graphics.hpp  Network.hpp  Utility.hpp  hello.hpp
lib/include/Core/: Component.hpp  Entity.hpp  System.hpp  Transform.hpp
lib/include/GameManager/: GameEngine.hpp  GameState.hpp  gameengine.hpp  gamemenustate.hpp  gamestate.hpp  menustate.hpp  playstate.hpp
lib/include/Graphics/: Camera.hpp  Heightmap.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshBuffer.hpp  MeshLoader.hpp  Node.hpp  Scene.hpp  Shader.hpp  ShaderManager.hpp  Skydome.hpp  VBO.hpp
lib/include/IA/: Behavior.hpp
lib/include/Network/: Config.hpp  Debug.hpp  DebugOff.hpp  Manager.hpp  NetAddress.hpp  Network.hpp  Packet.hpp  Socket.hpp  generic.hpp  htonll.hpp  inet_ntop.hpp  inet_pton.hpp
lib/include/Physics/: AABB3D.hpp  BSphere.hpp  Collidable.hpp  Physics.hpp
lib/include/Utility/: Clock.hpp  FilePath.hpp  Input.hpp  InputManager.hpp  Resource.hpp  Tools.hpp  Tools.hpp.orig  Window.hpp
lib/src/: hello.cpp
lib/src/Core/: Transform.cpp
lib/src/IA/: Behavior.cpp
resources/data/: config.xml
resources/models/: kart-2.3DS  kart.3DS  kart3.3DS  kart4.3DS  kart5.3DS
resources/shaders/: DFCustom.frag  DFShadow.frag  DFShadow.vert  DFbase.vert  DFclear.frag  DFfinal.frag  DFfinal.vert  DFgeometry.frag  DFlight.vert  DFlightDirectional.frag  DFlightPoint.frag  DFlightSpot.frag  DFnormal.frag  DFposition.frag  basic.frag  bumpmapping.frag  skybox.frag  skybox.vert  textured.frag  textured.vert
template/: CMakeLists.txt  client.cpp  game.cpp  main.cpp  main.cpp.orig  server.cpp
template/Core/: Math.cpp  Math.hpp  Matrix4.hpp  Matrix4.inl  Vector3.hpp  Vector3.inl
template/Game/: BaseComponent.hpp  BaseComponent.inl  Component.hpp  Entity.cpp  Entity.hpp  EntitySystem.cpp
template/Graphics/: Camera.cpp  Camera.hpp  Heightmap.cpp  Heightmap.hpp  IBO.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  Node.cpp  Node.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Skydome.cpp  Skydome.hpp  VAO.hpp  VBO.hpp  Vertex.hpp
template/Utility/: File.hpp  LogManager.cpp  LogManager.hpp
(+184 files in other folders)
